calico-policy.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: default-deny
spec:
  selector: projectcalico.org/namespace not in {'kube-system', 'kube-node-lease', 'kube-public', 'calico-system', 'calico-apiserver', 'cattle-fleet-system', 'cattle-impersonation-system', 'cattle-system', 'calico-monitoring'}
  types:
  - Ingress
  - Egress
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-busyboxnode1-egress
  namespace: network-policy-demo
spec:
  selector: app == 'busyboxnode1'
  types:
  - Egress
  egress:
  - action: Allow
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-busyboxnode2-egress
  namespace: network-policy-demo
spec:
  selector: app == 'busyboxnode2'
  types:
  - Egress
  egress:
  - action: Allow
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-busyboxnode1-ingress
  namespace: network-policy-demo
spec:
  selector: app == 'busyboxnode1'
  types:
  - Ingress
  ingress:
  - action: Allow
    source:
      selector: app == 'busyboxnode2'
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-busyboxnode2-ingress
  namespace: network-policy-demo
spec:
  selector: app == 'busyboxnode2'
  types:
  - Ingress
  ingress:
  - action: Allow
    source:
      selector: app == 'busyboxnode1'
